- Implement YAT ::Task to manage Start/Stop/Snap/... - Manage State - Manage Trigger

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@ basler-objs = BaslerCamera.o BaslerInterface.o
 SRCS = $(basler-objs:.o=.cpp) 
 
 CXXFLAGS = -I../include -I../../../hardware/include -I../../../common/include \
-			-I/opt/pylon/include -I/opt/pylon/include/genicam -DUSE_GIGE -Wall -pthread -fPIC -g
+			-I/opt/pylon/include -I/opt/pylon/include/genicam -DUSE_GIGE -Wall -pthread -fPIC -g \
+			-I../../../../YAT/include 
 
 all:	Basler.o
 
