--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>fr.soleil.lib.Lima</groupId>
         <artifactId>Camera</artifactId>
-        <version>1.1.8</version>
+        <version>1.1.9</version>
     </parent>
 
     <groupId>fr.soleil.lib.Lima.Camera</groupId>
@@ -14,6 +14,20 @@
 
     <name>LimaBasler</name>    <!-- use for the name of executable -->
     <description>This module controls the Basler Camera</description>
+	
+	<dependencies>
+		<dependency>
+        <groupId>com.basler</groupId>
+        <artifactId>Genicam-${aol}-shared-${mode}</artifactId>
+        <version>2.1.0</version>
+      </dependency>
+		
+      <dependency>
+        <groupId>com.basler</groupId>
+        <artifactId>Pylon-${aol}-shared-${mode}</artifactId>
+        <version>2.3.3</version>
+      </dependency>
+	</dependencies>
 
     <build>
         <plugins>
@@ -21,51 +35,9 @@
                 <groupId>org.freehep</groupId>
                 <artifactId>freehep-nar-plugin</artifactId>
                 <configuration>
-                    <linker>
-                        <libs>
-                            <lib>
-                                <name>pylonbase</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/lib</directory>
-                            </lib>
-
-							<lib>
-                                <name>GenApi_gcc40_v2_1</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/genicam/bin/Linux32_i86</directory>
-                            </lib>
-                          
-                            <lib>
-                                <name>GCBase_gcc40_v2_1</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/genicam/bin/Linux32_i86</directory>
-                            </lib>
-
-                            <lib>
-                                <name>MathParser_gcc40_v2_1</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/genicam/bin/Linux32_i86</directory>
-                            </lib>
-                            
-                            <lib>
-                                <name>log4cpp_gcc40_v2_1</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/genicam/bin/Linux32_i86</directory>
-                            </lib>
-                            
-                            <lib>
-                                <name>pylongigesupp</name>
-                                <type>shared</type>
-                                <directory>${env.PYLON_ROOT}/lib</directory>
-                            </lib>                
-                        </libs>
-                    </linker>
+                    
+					
                     <cpp>
-                        <systemIncludePaths>
-                        	<systemIncludePath>${env.PYLON_ROOT}</systemIncludePath>
-                            <systemIncludePath>${env.PYLON_ROOT}/include</systemIncludePath>
-                            <systemIncludePath>${env.PYLON_ROOT}/genicam/library/CPP/include</systemIncludePath>
-                        </systemIncludePaths>
                         <defines>
                             <define>USE_GIGE</define>
                         </defines>
