Split capabilities into several files
Split into multiples files

revert BaslerCamera.h

coherent indentation

Add GPL header

remove exe on files

Fixed a merge problem

Add missing delete

Back to a camera reference

Manage linux compilation due to split

Last fixed to get it working

rename project file

recover window lib export in Interface

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-basler-objs = BaslerCamera.o BaslerInterface.o
+basler-objs = BaslerCamera.o BaslerInterface.o BaslerDetInfoCtrlObj.o BaslerSyncCtrlObj.o BaslerRoiCtrlObj.o BaslerBinCtrlObj.o
 
 SRCS = $(basler-objs:.o=.cpp) 
 
@@ -23,4 +23,7 @@ clean:
 	-e '/^$$/ d' -e 's/$$/ :/' < $*.d >> $*.P; \
 	rm -f $*.d
 
+
 -include $(SRCS:.cpp=.P)
+
+
