--- a/pom.xml
+++ b/pom.xml
@@ -2,31 +2,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>fr.soleil.lib.Lima</groupId>
-        <artifactId>Camera</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <groupId>fr.soleil</groupId>
+        <artifactId>super-pom-C-CPP</artifactId>
+        <version>RELEASE</version>
     </parent>
 
     <groupId>fr.soleil.lib.Lima.Camera</groupId>
     <artifactId>LimaBasler-${aol}-shared-${mode}</artifactId>
+	<version>1.3.0-SNAPSHOT</version>
 
     <packaging>nar</packaging>
-
     <name>LimaBasler</name>    <!-- use for the name of executable -->
     <description>This module controls the Basler Camera</description>
 	
 	<dependencies>
 		<dependency>
-        <groupId>com.basler</groupId>
-        <artifactId>Genicam-${aol}-shared-${mode}</artifactId>
-        <version>2.1.0</version>
-      </dependency>
-		
-      <dependency>
-        <groupId>com.basler</groupId>
-        <artifactId>Pylon-${aol}-shared-${mode}</artifactId>
-        <version>2.3.3</version>
-      </dependency>
+			<groupId>fr.soleil.lib</groupId>
+			<artifactId>LimaCore-${aol}-shared-${mode}</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.basler</groupId>
+			<artifactId>Genicam-${aol}-shared-${mode}</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.basler</groupId>
+			<artifactId>Pylon-${aol}-shared-${mode}</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 	</dependencies>
 
     <build>
@@ -35,9 +39,11 @@
                 <groupId>org.freehep</groupId>
                 <artifactId>freehep-nar-plugin</artifactId>
                 <configuration>
-                    
-					
                     <cpp>
+						<sourceDirectory>src</sourceDirectory>
+						<includePaths>
+							<includePath>include</includePath>
+						</includePaths>
                         <defines>
                             <define>USE_GIGE</define>
                         </defines>
@@ -46,9 +52,39 @@
                             <option>-w</option>
                         </options>
                     </cpp>
+					<libraries>
+						<library>
+							<type>shared</type>
+						</library>
+					</libraries>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+	
+	<developers>
+       <developer>
+           <id>langlois</id>
+           <name>langlois</name>
+           <url>http://controle/</url>
+           <organization>Synchrotron Soleil</organization>
+           <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
+           <roles>
+               <role>manager</role>
+           </roles>
+           <timezone>1</timezone>
+       </developer>
+       <developer>
+           <id>noureddine</id>
+           <name>noureddine</name>
+           <url>http://controle/</url>
+           <organization>Synchrotron Soleil</organization>
+           <organizationUrl>http://www.synchrotron-soleil.fr</organizationUrl>
+           <roles>
+               <role>developer</role>
+           </roles>
+           <timezone>1</timezone>
+       </developer>
+   </developers>
 
 </project>
