--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,19 @@
-basler-objs = BaslerCamera.o BaslerInterface.o BaslerDetInfoCtrlObj.o BaslerSyncCtrlObj.o BaslerRoiCtrlObj.o BaslerBinCtrlObj.o
+basler-objs = BaslerCamera.o BaslerInterface.o BaslerDetInfoCtrlObj.o BaslerSyncCtrlObj.o BaslerRoiCtrlObj.o BaslerBinCtrlObj.o \
+	BaslerVideoCtrlObj.o
 
-SRCS = $(basler-objs:.o=.cpp) 
+SRCS = $(basler-objs:.o=.cpp)
+
+ifndef PYLON_ROOT
+PYLON_ROOT = /opt/pylon
+endif
+
+ifndef GENICAM_ROOT_V2_1
+GENICAM_ROOT_V2_1 = $(PYLON_ROOT)/genicam
+endif
 
 CXXFLAGS += -I../include -I../../../hardware/include -I../../../common/include \
-			-I/opt/pylon/include \
-			-I/opt/pylon/include/genicam \
-			-I/opt/pylon/genicam/library/CPP/include \
+			-I$(PYLON_ROOT)/include \
+			-I$(GENICAM_ROOT_V2_1)/library/CPP/include \
 			-DUSE_GIGE -Wall -pthread -fPIC -g
 
 all:	Basler.o
@@ -27,3 +35,7 @@ clean:
 -include $(SRCS:.cpp=.P)
 
 
+
+.PHONY: check-syntax
+check-syntax:
+	$(CXX) -Wall -Wextra -fsyntax-only $(CXXFLAGS) $(CHK_SOURCES)
