--- a/src/Makefile
+++ b/src/Makefile
@@ -1,19 +1,11 @@
-basler-objs = BaslerCamera.o BaslerInterface.o BaslerDetInfoCtrlObj.o BaslerSyncCtrlObj.o BaslerRoiCtrlObj.o BaslerBinCtrlObj.o \
-	BaslerVideoCtrlObj.o
+basler-objs = BaslerCamera.o BaslerInterface.o BaslerDetInfoCtrlObj.o BaslerSyncCtrlObj.o BaslerRoiCtrlObj.o BaslerBinCtrlObj.o
 
-SRCS = $(basler-objs:.o=.cpp)
-
-ifndef PYLON_ROOT
-PYLON_ROOT = /opt/pylon
-endif
-
-ifndef GENICAM_ROOT_V2_1
-GENICAM_ROOT_V2_1 = $(PYLON_ROOT)/genicam
-endif
+SRCS = $(basler-objs:.o=.cpp) 
 
 CXXFLAGS += -I../include -I../../../hardware/include -I../../../common/include \
-			-I$(PYLON_ROOT)/include \
-			-I$(GENICAM_ROOT_V2_1)/library/CPP/include \
+			-I/opt/pylon/include \
+			-I/opt/pylon/include/genicam \
+			-I/opt/pylon/genicam/library/CPP/include \
 			-DUSE_GIGE -Wall -pthread -fPIC -g
 
 all:	Basler.o
@@ -35,7 +27,3 @@ clean:
 -include $(SRCS:.cpp=.P)
 
 
-
-.PHONY: check-syntax
-check-syntax:
-	$(CXX) -Wall -Wextra -fsyntax-only $(CXXFLAGS) $(CHK_SOURCES)
