add install rule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,4 +24,5 @@ TARGET_LINK_LIBRARIES(limabasler ${PYLONBASE})
 FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
 TARGET_LINK_LIBRARIES(limabasler ${PYLONGIGESUPP})
 SET_TARGET_PROPERTIES(limabasler PROPERTIES VERSION ${basler_ver} SOVERSION "1")
-
+INSTALL(TARGETS limabasler
+        LIBRARY DESTINATION lib)
