cmake: check for missing libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,16 @@ TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/includ
 TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/include")
 TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
 TARGET_COMPILE_DEFINITIONS(limabasler PUBLIC USE_GIGE)
-TARGET_LINK_LIBRARIES(limabasler limacore)
+
 FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
-TARGET_LINK_LIBRARIES(limabasler ${PYLONBASE})
 FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR
+    ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
+    MESSAGE(FATAL_ERROR "pylonbase or pylongigesupp not found")
+ENDIF()
+
+TARGET_LINK_LIBRARIES(limabasler limacore)
+TARGET_LINK_LIBRARIES(limabasler ${PYLONBASE})
 TARGET_LINK_LIBRARIES(limabasler ${PYLONGIGESUPP})
 SET_TARGET_PROPERTIES(limabasler PROPERTIES VERSION ${basler_ver} SOVERSION "1")
 INSTALL(TARGETS limabasler
