[cmake] Fix Pylon path on Windows
Error message is `pylonbase or pylongigesupp not found`.

So Fix search path for Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,14 @@ TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/include")
 TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
 TARGET_COMPILE_DEFINITIONS(limabasler PUBLIC USE_GIGE)
 
-FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
-FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+IF (WIN32)
+    SET(PYLON_SUFFIX "_MD_VC100" CACHE STRING "Suffix used in Windows for naming Pylon files")
+    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONGIGESUPP PylonGigE${PYLON_SUFFIX}_TL ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+ELSE()
+    FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+    FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+ENDIF()
 IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR
     ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
     MESSAGE(FATAL_ERROR "pylonbase or pylongigesupp not found")
