[cmake] Add compile definition to fix dllimport error
Warning message is `Inconsistent dll linkage`

The ``LIBBASLER_EXPORTS`` variable is used in
BaslerCompatibility.h header file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ ELSE()
     TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
 ENDIF()
 TARGET_COMPILE_DEFINITIONS(limabasler PUBLIC USE_GIGE)
+IF(WIN32)
+    TARGET_COMPILE_DEFINITIONS(limabasler PRIVATE LIBBASLER_EXPORTS)
+ENDIF()
 
 IF (WIN32)
     SET(PYLON_SUFFIX "_MD_VC100" CACHE STRING "Suffix used in Windows for naming Pylon files")
