[cmake] Link more libraries on Windows
Error messages are `Cannot open file: GCBase_MD_VC100_v2_3.lib`
(resp. `GenApi_MD_VC100_v2_3.lob`, etc., etc.).

All these files are in the\genicam\library\cpp\lib\win64_x64 folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,21 @@ ENDIF()
 TARGET_LINK_LIBRARIES(limabasler limacore)
 TARGET_LINK_LIBRARIES(limabasler ${PYLONBASE})
 TARGET_LINK_LIBRARIES(limabasler ${PYLONGIGESUPP})
+IF(WIN32)
+    FIND_LIBRARY(PYLONGUI PylonGUI${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONUTILITY PylonUtility${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONBOOTSTRAPPER PylonBootstrapper ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONGCBASE GCBase${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONGENAPI GenApi${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONMATHPARSER MathParser${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONLOG Log${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONLOG4CPP log4cpp${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONLOG4CPPSTATIC log4cpp-static${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONCLALLSERIAL CLAllSerial${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONCLPROTOCOL CLProtocol${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    FIND_LIBRARY(PYLONCLSERCOM CLSerCOM ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
+    TARGET_LINK_LIBRARIES(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONBOOTSTRAPPER} ${PYLONGCBASE} ${PYLONGENAPI} ${PYLONMATHPARSER} ${PYLONLOG} ${PYLONLOG4CPP} ${PYLONLOG4CPPSTATIC} ${PYLONCLALLSERIAL} ${PYLONCLPROTOCOL} ${PYLONCLSERCOM})
+ENDIF()
 SET_TARGET_PROPERTIES(limabasler PROPERTIES VERSION ${basler_ver} SOVERSION "1")
 if(WIN32)
     INSTALL(TARGETS limabasler
