[cmake] Do no use sip splits for simulator camera
For the Basler camera, only 4 files are generated by SIP
(`siplimabaslerpart{0,1,2,3}.cpp`). Hence the process crash trying to
find file number 4 (`No such file or directory siplimabaslerpart4.cpp`)

Put everything in one file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ IF(COMPILE_SIP)
     ENDFOREACH()
 
     CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/sip/limamodules.sip.in sip/limabasler.sip)
+    SET(SIP_CONCAT_PARTS 1)
     SET(SIP_INCLUDES ${SIP_INCLUDES}
         "${CMAKE_SOURCE_DIR}/third-party/Processlib/sip"
         "${CMAKE_BINARY_DIR}/sip/core"
