Added option for pylon sdk version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
 
 SET(PYLON_ROOT "/opt/pylon" CACHE PATH "location of pylon sdk")
+SET(PYLON_VERSION "5" CACHE STRING "Pylon version 3 or 5")
 
-SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--add-needed")
+IF(UNIX)
+  SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--add-needed")
+ENDIF()
+
+
 LINK_DIRECTORIES(${PYLON_ROOT}/genicam/bin/Linux64_x64)
 
 SET(basler_srcs src/BaslerCamera.cpp src/BaslerInterface.cpp src/BaslerDetInfoCtrlObj.cpp
@@ -14,33 +19,56 @@ ADD_LIBRARY(limabasler SHARED
 )
 TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/include")
-if(WIN32)
+IF ("${PYLON_VERSION}" STREQUAL "3")
+  IF(WIN32)
     TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/../genicam/library/cpp/include")
-ELSE()
+  ELSE()
     TARGET_INCLUDE_DIRECTORIES(limabasler PUBLIC "${PYLON_ROOT}/genicam/library/CPP/include")
+  ENDIF()
 ENDIF()
+
 TARGET_COMPILE_DEFINITIONS(limabasler PUBLIC USE_GIGE)
 IF(WIN32)
     TARGET_COMPILE_DEFINITIONS(limabasler PRIVATE LIBBASLER_EXPORTS)
 ENDIF()
 
-IF (WIN32)
+IF ("${PYLON_VERSION}" STREQUAL "3")
+  IF (WIN32)
     SET(PYLON_SUFFIX "_MD_VC100" CACHE STRING "Suffix used in Windows for naming Pylon files")
     FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
     FIND_LIBRARY(PYLONGIGESUPP PylonGigE${PYLON_SUFFIX}_TL ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-ELSE()
+  ELSE()
     FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
     FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
-ENDIF()
-IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR
-    ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
-    MESSAGE(FATAL_ERROR "pylonbase or pylongigesupp not found")
+  ENDIF()
+  
+  IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
+    MESSAGE(FATAL_ERROR "pylonbase or pylongige not found")
+  ENDIF()
+ELSE()
+  IF (WIN32)
+    SET(PYLON_SUFFIX "_MD_VC120" CACHE STRING "Suffix used in Windows for naming Pylon files")
+    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX}_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+  ELSE()
+    FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
+  ENDIF()
+
+  IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND"))
+    MESSAGE(FATAL_ERROR "pylonbase not found")
+  ENDIF()  
 ENDIF()
 
+IF (WIN32)
+  TARGET_LINK_LIBRARIES(limabasler ws2_32)
+ENDIF()
 TARGET_LINK_LIBRARIES(limabasler limacore)
 TARGET_LINK_LIBRARIES(limabasler ${PYLONBASE})
-TARGET_LINK_LIBRARIES(limabasler ${PYLONGIGESUPP})
+IF ("${PYLON_VERSION}" STREQUAL "3")
+  TARGET_LINK_LIBRARIES(limabasler ${PYLONGIGESUPP})
+ENDIF()
+
 IF(WIN32)
+  IF ("${PYLON_VERSION}" STREQUAL "3")
     FIND_LIBRARY(PYLONGUI PylonGUI${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
     FIND_LIBRARY(PYLONUTILITY PylonUtility${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
     FIND_LIBRARY(PYLONBOOTSTRAPPER PylonBootstrapper ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
@@ -54,8 +82,18 @@ IF(WIN32)
     FIND_LIBRARY(PYLONCLPROTOCOL CLProtocol${PYLON_SUFFIX}_v2_3 ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
     FIND_LIBRARY(PYLONCLSERCOM CLSerCOM ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
     TARGET_LINK_LIBRARIES(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONBOOTSTRAPPER} ${PYLONGCBASE} ${PYLONGENAPI} ${PYLONMATHPARSER} ${PYLONLOG} ${PYLONLOG4CPP} ${PYLONLOG4CPPSTATIC} ${PYLONCLALLSERIAL} ${PYLONCLPROTOCOL} ${PYLONCLSERCOM})
+  ELSE()
+    FIND_LIBRARY(PYLONGUI PylonGUI${PYLON_SUFFIX}_v5_0  ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONUTILITY PylonUtility${PYLON_SUFFIX}_v5_0  ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONGCBASE GCBase${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)   
+    FIND_LIBRARY(PYLONGENAPI GenApi${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    TARGET_LINK_LIBRARIES(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONGCBASE} ${PYLONGENAPI})     
+  ENDIF()
 ENDIF()
+  
+  
 SET_TARGET_PROPERTIES(limabasler PROPERTIES VERSION ${basler_ver} SOVERSION "1")
+
 if(WIN32)
     SET_TARGET_PROPERTIES(limabasler PROPERTIES PREFIX "lib")
 endif()
