Updated CMakeList.txt for windows 32 and 64 compatible

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,17 @@ IF(UNIX)
   SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--add-needed")
 ENDIF()
 
+# Pylon SDK installer installs both 32 and 64 libs, so give find_library() single path 
+IF(WIN32)
+  MESSAGE ("Win arch is  " ${CMAKE_SYSTEM_PROCESSOR})
+  IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+    SET(PYLON_LIB_DIR ${PYLON_ROOT}/lib/x64)
+    SET(GENICAM_LIB_DIR ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_x64)
+  ELSE()
+    SET (PYLON_LIB_DIR ${PYLON_ROOT}/lib/win32)    
+    SET(GENICAM_LIB_DIR ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86)    
+  ENDIF()
+ENDIF()
 
 LINK_DIRECTORIES(${PYLON_ROOT}/genicam/bin/Linux64_x64)
 
@@ -35,8 +46,8 @@ ENDIF()
 IF ("${PYLON_VERSION}" STREQUAL "3")
   IF (WIN32)
     SET(PYLON_SUFFIX "_MD_VC100" CACHE STRING "Suffix used in Windows for naming Pylon files")
-    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX} ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    FIND_LIBRARY(PYLONGIGESUPP PylonGigE${PYLON_SUFFIX}_TL ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX} ${PYLON_LIB_DIR})
+    FIND_LIBRARY(PYLONGIGESUPP PylonGigE${PYLON_SUFFIX}_TL ${PYLON_LIB_DIR})
   ELSE()
     FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
     FIND_LIBRARY(PYLONGIGESUPP pylongigesupp ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
