Cmake for Basler with windows path updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
+IF(WIN32)
+	SET(PYLON_ROOT "C:/Program Files/Basler/pylon 5/Development" CACHE PATH "location of pylon sdk")
+ELSE()
+	SET(PYLON_ROOT "${OPT_ROOT}/pylon" CACHE PATH "location of pylon sdk")
+ENDIF()
 
-SET(PYLON_ROOT "/opt/pylon" CACHE PATH "location of pylon sdk")
 SET(PYLON_VERSION "5" CACHE STRING "Pylon version 3 or 5")
-
 IF(UNIX)
   SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--add-needed")
 ENDIF()
@@ -11,10 +14,9 @@ IF(WIN32)
   MESSAGE ("Win arch is  " ${CMAKE_SYSTEM_PROCESSOR})
   IF(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
     SET(PYLON_LIB_DIR ${PYLON_ROOT}/lib/x64)
-    SET(GENICAM_LIB_DIR ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_x64)
   ELSE()
-    SET (PYLON_LIB_DIR ${PYLON_ROOT}/lib/win32)    
-    SET(GENICAM_LIB_DIR ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86)    
+    SET (PYLON_LIB_DIR ${PYLON_ROOT}/lib/win32)
+    MESSAGE ("OK")
   ENDIF()
 ENDIF()
 
@@ -56,10 +58,11 @@ IF ("${PYLON_VERSION}" STREQUAL "3")
   IF (("${PYLONBASE}" STREQUAL "PYLONBASE-NOTFOUND") OR ("${PYLONGIGESUPP}" STREQUAL "PYLONGIGESUPP-NOTFOUND"))
     MESSAGE(FATAL_ERROR "pylonbase or pylongige not found")
   ENDIF()
+#IF("${PYLON_VERSION}" STREQUAL "5")
 ELSE()
   IF (WIN32)
     SET(PYLON_SUFFIX "_MD_VC120" CACHE STRING "Suffix used in Windows for naming Pylon files")
-    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX}_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONBASE PylonBase${PYLON_SUFFIX}_v5_0 ${PYLON_LIB_DIR})
   ELSE()
     FIND_LIBRARY(PYLONBASE pylonbase ${PYLON_ROOT}/lib ${PYLON_ROOT}/lib64)
   ENDIF()
@@ -94,10 +97,10 @@ IF(WIN32)
     FIND_LIBRARY(PYLONCLSERCOM CLSerCOM ${PYLON_ROOT}/../genicam/library/cpp/lib/win32_i86 ${PYLON_ROOT}/../genicam/library/cpp/lib/win64_x64)
     TARGET_LINK_LIBRARIES(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONBOOTSTRAPPER} ${PYLONGCBASE} ${PYLONGENAPI} ${PYLONMATHPARSER} ${PYLONLOG} ${PYLONLOG4CPP} ${PYLONLOG4CPPSTATIC} ${PYLONCLALLSERIAL} ${PYLONCLPROTOCOL} ${PYLONCLSERCOM})
   ELSE()
-    FIND_LIBRARY(PYLONGUI PylonGUI${PYLON_SUFFIX}_v5_0  ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    FIND_LIBRARY(PYLONUTILITY PylonUtility${PYLON_SUFFIX}_v5_0  ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
-    FIND_LIBRARY(PYLONGCBASE GCBase${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)   
-    FIND_LIBRARY(PYLONGENAPI GenApi${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_ROOT}/lib/Win32 ${PYLON_ROOT}/lib/x64)
+    FIND_LIBRARY(PYLONGUI PylonGUI${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
+    FIND_LIBRARY(PYLONUTILITY PylonUtility${PYLON_SUFFIX}_v5_0  ${PYLON_LIB_DIR})
+    FIND_LIBRARY(PYLONGCBASE GCBase${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})   
+    FIND_LIBRARY(PYLONGENAPI GenApi${PYLON_SUFFIX}_v3_0_Basler_pylon_v5_0 ${PYLON_LIB_DIR})
     TARGET_LINK_LIBRARIES(limabasler ${PYLONGUI} ${PYLONUTILITY} ${PYLONGCBASE} ${PYLONGENAPI})     
   ENDIF()
 ENDIF()
