--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,25 @@
+############################################################################
+# This file is part of LImA, a Library for Image Acquisition
+#
+# Copyright (C) : 2009-2017
+# European Synchrotron Radiation Facility
+# BP 220, Grenoble 38043
+# FRANCE
+#
+# This is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This software is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, see <http://www.gnu.org/licenses/>.
+############################################################################
+# CMakeLists.txt for Basler camera
 IF(WIN32)
 	SET(PYLON_ROOT "C:/Program Files/Basler/pylon 5/Development" CACHE PATH "location of pylon sdk")
 ELSE()
@@ -122,35 +144,6 @@ endif()
 
 IF(COMPILE_SIP)
     SET(NAME "basler")
-    SET(INCLUDES)
-    FILE(GLOB sipfiles
-         RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/sip"
-         "${CMAKE_CURRENT_SOURCE_DIR}/sip/*.sip")
-    FOREACH(sipfile ${sipfiles})
-        SET(INCLUDES
-"${INCLUDES}
-%Include ${sipfile}")
-    ENDFOREACH()
-
-    CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/sip/limamodules.sip.in sip/limabasler.sip)
-    SET(SIP_CONCAT_PARTS 1)
-    SET(SIP_INCLUDES ${SIP_INCLUDES}
-        "${CMAKE_SOURCE_DIR}/third-party/Processlib/sip"
-        "${CMAKE_BINARY_DIR}/sip/core"
-        "${CMAKE_SOURCE_DIR}/third-party/Processlib/tasks/sip"
-        "${CMAKE_SOURCE_DIR}/common/sip"
-        "${CMAKE_SOURCE_DIR}/hardware/sip"
-        "${CMAKE_SOURCE_DIR}/control/sip"
-        "${CMAKE_SOURCE_DIR}/control/software_operation/sip"
-        "${CMAKE_CURRENT_SOURCE_DIR}/sip")
-    set(SIP_DISABLE_FEATURES WITH_CONFIG)
-    set(SIP_CHECK_EXC ON)
-    ADD_SIP_PYTHON_MODULE(limabasler ${CMAKE_CURRENT_BINARY_DIR}/sip/limabasler.sip)
-    TARGET_INCLUDE_DIRECTORIES(python_module_limabasler PRIVATE
-                               ${PYTHON_INCLUDE_DIRS}
-                               "${CMAKE_SOURCE_DIR}/sip"
-                               "${CMAKE_SOURCE_DIR}/sip/core")
-    TARGET_LINK_LIBRARIES(python_module_limabasler limabasler)
-
+    include(CameraRunSIP)
     INSTALL(FILES python/__init__.py DESTINATION "${PYTHON_SITE_PACKAGES_DIR}/Lima/Basler")
 ENDIF()
